# aqequil

./: .gitignore  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.txt  compile_eq3_6.py  prepare_databases.py  pyproject.toml  setup.py  test_integration.py
.github/workflows/: build-wheels.yml
AqEquil/: 3o_mine.r  AqSpeciation.py  MassTransfer.py  _HKF_cgl.py  check_TP_grid.r  create_data0.r  fill_data0_header.r  half_cell_reactions_original.csv  input_validation_WIP.py  preprocess_for_EQ3.r  r_print.r  redox_and_dissrxns.r  speciation_groups_WORM.txt
aqequil/: AqSpeciation.py  MassTransfer.py  _HKF_cgl.py  __init__.py  check_TP_grid.py  create_data0.py  data0.min  dissrxn_balancer.py  dissrxn_generator.py  fill_data0_header.py  formula_parser.py  half_cell_reactions.csv  output_3o_mine.py  preprocess_for_EQ3.py  process_dissrxns.py  redox_suppression.py  speciation_groups_WORM.txt
aqequil/databases/: __init__.py
aqequil/eq3_6_src/: __init__.py
aqequil/test_data/: __init__.py  input_example_wrm.csv
html/AqEquil/: AqSpeciation.html  MassTransfer.html  index.html  input_validation_WIP.html
html/aqequil/: AqSpeciation.html  MassTransfer.html  check_TP_grid.html  create_data0.html  dissrxn_balancer.html  dissrxn_generator.html  fill_data0_header.html  formula_parser.html  index.html  output_3o_mine.html  preprocess_for_EQ3.html  process_dissrxns.html  redox_suppression.html
logs/: 0_Upload to PyPI.txt  10_Test wheels on macos-15-intel with Python 3.10.txt  10_Test wheels on windows-2019 with Python 3.11.txt  11_Test wheels on macos-latest with Python 3.12.txt  11_Test wheels on macos-latest with Python 3.13.txt  12_Test wheels on macos-15-intel with Python 3.12.txt  13_Test wheels on ubuntu-latest with Python 3.10.txt  13_Test wheels on windows-2019 with Python 3.10.txt  14_Test wheels on macos-15-intel with Python 3.10.txt  14_Test wheels on ubuntu-latest with Python 3.12.txt  15_Test wheels on macos-15-intel with Python 3.11.txt  15_Test wheels on ubuntu-latest with Python 3.13.txt  16_Test wheels on windows-2019 with Python 3.11.txt  16_Test wheels on windows-2019 with Python 3.13.txt  17_Build wheels on macos-15-intel.txt  17_Build wheels on macos-latest.txt  18_Build source distribution.txt  18_Build wheels on macos-latest.txt  19_Build source distribution.txt  19_Build wheels on ubuntu-latest.txt  1_Test wheels on ubuntu-latest with Python 3.13.txt  1_Test wheels on windows-2019 with Python 3.13.txt  20_Build wheels on windows-2019.txt  21_Build wheels on macos-15-intel.txt  21_Build wheels on ubuntu-latest.txt  2_Test wheels on ubuntu-latest with Python 3.10.txt  2_Test wheels on windows-2019 with Python 3.12.txt  3_Test wheels on macos-latest with Python 3.12.txt  3_Test wheels on ubuntu-latest with Python 3.11.txt  4_Test wheels on macos-latest with Python 3.10.txt  4_Test wheels on macos-latest with Python 3.13.txt  5_Test wheels on macos-latest with Python 3.10.txt  5_Test wheels on windows-2019 with Python 3.12.txt  6_Test wheels on macos-15-intel with Python 3.13.txt  6_Test wheels on windows-2019 with Python 3.10.txt  7_Test wheels on macos-15-intel with Python 3.11.txt  7_Test wheels on macos-15-intel with Python 3.13.txt  8_Test wheels on macos-latest with Python 3.11.txt  8_Test wheels on ubuntu-latest with Python 3.12.txt  9_Test wheels on macos-latest with Python 3.11.txt  (+1 more)
logs/Build source distribution/: 11_Post Set up Python.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install build.txt  5_Build sdist.txt  6_Upload sdist.txt  system.txt
logs/Build wheels on macos-15-intel/: 11_Upload wheels.txt  1_Set up job.txt  21_Post Set up Python.txt  22_Post Run actions_checkout@v4.txt  23_Complete job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install cibuildwheel.txt  8_Build wheels (macOS Intel).txt  (+2 more)
(+211 files in other folders)
